[package]
name = "ccap"
version = "1.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["wysaid <this@wysaid.org>"]
license = "MIT"
description = "Rust bindings for ccap - A high-performance, lightweight cross-platform camera capture library"
homepage = "https://github.com/wysaid/CameraCapture"
repository = "https://github.com/wysaid/CameraCapture"
readme = "README.md"
keywords = ["camera", "capture", "video", "cross-platform"]
categories = ["multimedia::video", "api-bindings"]

[dependencies]
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

[build-dependencies]
bindgen = "0.68"
cc = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
async = ["tokio", "tokio-stream", "futures"]

[[example]]
name = "print_camera"
path = "examples/print_camera.rs"

[[example]]
name = "minimal_example"
path = "examples/minimal_example.rs"

[[example]]
name = "capture_grab"
path = "examples/capture_grab.rs"

[[example]]
name = "capture_callback"
path = "examples/capture_callback.rs"
